Fixed project iFrame issue
Constrained iFrame height to 75% of viewport height that some times would cause it to appear below the navigation bars

--- a/_sass/_portfolio.scss
+++ b/_sass/_portfolio.scss
@@ -72,6 +72,7 @@
 
         .beerkiss-iframe {
             box-sizing: content-box;
+            max-height: 75vh;
             border: solid 15px white;
         }
 
